--- a/Patterns/Patterns.csproj
+++ b/Patterns/Patterns.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="BuilderPattern\Directors\" />
+    <Folder Include="BuilderPattern\Products\" />
     <Folder Include="FactoryMethodPattern\Products\" />
   </ItemGroup>
 
